# slackdump

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
slackdump/: __init__.py  __main__.py  cli.py  filters.py  parser.py
tests/: __init__.py  test_cli.py  test_filters.py  test_parser.py
